Changed function plugin loading to iterate over plugins directory files instead of loading from a single jar